--- a/package.json
+++ b/package.json
@@ -22,28 +22,23 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.2",
     "@mediapipe/camera_utils": "^0.3.1675466862",
-    "@mediapipe/hands": "^0.4.1675469240",
     "@mediapipe/pose": "^0.5.1675469404",
     "@mediapipe/tasks-vision": "^0.10.17",
     "@react-three/fiber": "^8.17.10",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query": "^5.50.0",
     "@tensorflow/tfjs": "^4.22.0",
-    "@trpc/client": "^10.45.2",
-    "@trpc/next": "^10.45.2",
-    "@trpc/react-query": "^10.45.2",
-    "@trpc/server": "^10.45.2",
+    "@trpc/client": "^11.0.0-rc.446",
+    "@trpc/react-query": "^11.0.0-rc.446",
+    "@trpc/server": "^11.0.0-rc.446",
     "drizzle-orm": "^0.33.0",
     "framer-motion": "^11.11.11",
     "geist": "^1.3.0",
-    "latest": "link:@trpc/react-query/latest",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
-    "pg": "^8.13.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-query": "^3.39.3",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "three": "^0.170.0",
