--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.2",
     "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/hands": "^0.4.1675469240",
+    "@mediapipe/holistic": "^0.5.1675471629",
     "@mediapipe/pose": "^0.5.1675469404",
     "@mediapipe/tasks-vision": "^0.10.17",
+    "@pixiv/three-vrm": "^3.1.4",
     "@react-three/fiber": "^8.17.10",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
@@ -35,6 +38,7 @@
     "drizzle-orm": "^0.33.0",
     "framer-motion": "^11.11.11",
     "geist": "^1.3.0",
+    "kalidokit": "^1.1.5",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.4",
