--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@mediapipe/pose": "^0.5.1675469404",
     "@mediapipe/tasks-vision": "^0.10.17",
     "@pixiv/three-vrm": "^3.1.4",
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-three/fiber": "^8.17.10",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
@@ -35,10 +37,14 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
+    "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.11.11",
     "geist": "^1.3.0",
     "kalidokit": "^1.1.5",
+    "lucide-react": "^0.454.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "postgres": "^3.4.4",
@@ -46,6 +52,8 @@
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
     "zod": "^3.23.3"
   },
